[gd_scene load_steps=12 format=3 uid="uid://dwmntks81lkk5"]

[ext_resource type="Texture2D" uid="uid://b7t1i6tlilnky" path="res://Sprites/pentagram.png" id="1_8yrbv"]
[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_v4a7y"]
[ext_resource type="PackedScene" uid="uid://dll3udxwivwht" path="res://Scenes/demon.tscn" id="2_8bmdd"]
[ext_resource type="Script" path="res://Scripts/upgrade.gd" id="4_5edjn"]
[ext_resource type="AudioStream" uid="uid://cxvpx51s0es5r" path="res://Sounds/summon.wav" id="4_qhy7w"]
[ext_resource type="Texture2D" uid="uid://dv243t0idohw0" path="res://Sprites/tutorial.png" id="4_xrtut"]
[ext_resource type="PackedScene" uid="uid://baobgqw7ynxyc" path="res://Scenes/tower_succubus.tscn" id="5_imkq0"]
[ext_resource type="PackedScene" uid="uid://7nier2s8l8qk" path="res://Scenes/tower_hound.tscn" id="5_qopfj"]
[ext_resource type="AudioStream" uid="uid://medwmvd6dtxp" path="res://Sounds/place.wav" id="9_mxcml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdkwq"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7a8h"]
size = Vector2(16, 16)

[node name="Tower" type="Node2D" node_paths=PackedStringArray("carrier", "hell", "summon1", "summon2", "summon3", "tutorial")]
script = ExtResource("1_v4a7y")
carrier = NodePath("Hell/Carrier")
hell = NodePath("Hell")
summon1 = NodePath("Summon1")
summon2 = NodePath("Summon2")
summon3 = NodePath("Summon3")
tutorial = NodePath("Summon3/Tutorial")

[node name="Hell" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hell"]
shape = SubResource("RectangleShape2D_kdkwq")

[node name="Sprite2D" type="Sprite2D" parent="Hell"]
visible = false
texture = ExtResource("1_8yrbv")

[node name="Carrier" type="Area2D" parent="Hell"]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hell/Carrier"]
z_index = 1
shape = SubResource("RectangleShape2D_s7a8h")
debug_color = Color(0.878431, 0.337255, 0.0627451, 0.419608)

[node name="Demon" parent="Hell/Carrier" instance=ExtResource("2_8bmdd")]

[node name="Upgr1" type="Area2D" parent="Hell"]
position = Vector2(0, -8)
script = ExtResource("4_5edjn")
upgrade_tower = ExtResource("5_imkq0")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hell/Upgr1"]
position = Vector2(0, -8)
polygon = PackedVector2Array(0, 0, 7, 8, -7, 8)

[node name="ReferenceRect" type="ReferenceRect" parent="Hell/Upgr1"]
visible = false
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 16.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
editor_only = false

[node name="Upgr6" type="Area2D" parent="Hell"]
position = Vector2(0, 8)
script = ExtResource("4_5edjn")
upgrade_tower = ExtResource("5_imkq0")

[node name="ReferenceRect" type="ReferenceRect" parent="Hell/Upgr6"]
visible = false
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 16.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
editor_only = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hell/Upgr6"]
position = Vector2(0, 8)
polygon = PackedVector2Array(0, 0, -7, -8, 7, -8)

[node name="Upgr4" type="Area2D" parent="Hell"]
position = Vector2(8, 0)
script = ExtResource("4_5edjn")
upgrade_tower = ExtResource("5_qopfj")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hell/Upgr4"]
position = Vector2(8, 0)
polygon = PackedVector2Array(0, 0, -8, -7, -8, 7)

[node name="ReferenceRect" type="ReferenceRect" parent="Hell/Upgr4"]
visible = false
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
editor_only = false

[node name="Upgr3" type="Area2D" parent="Hell"]
position = Vector2(-8, 0)
script = ExtResource("4_5edjn")
upgrade_tower = ExtResource("5_qopfj")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hell/Upgr3"]
position = Vector2(-8, 0)
polygon = PackedVector2Array(0, 0, 8, -7, 8, 7)

[node name="ReferenceRect" type="ReferenceRect" parent="Hell/Upgr3"]
visible = false
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
mouse_filter = 2
border_color = Color(1, 1, 1, 1)
editor_only = false

[node name="Summon1" type="Area2D" parent="."]
position = Vector2(240, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Summon1"]
shape = SubResource("RectangleShape2D_kdkwq")

[node name="Sprite2D" type="Sprite2D" parent="Summon1"]
texture = ExtResource("1_8yrbv")

[node name="Summon2" type="Area2D" parent="."]
position = Vector2(0, 144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Summon2"]
shape = SubResource("RectangleShape2D_kdkwq")

[node name="Sprite2D" type="Sprite2D" parent="Summon2"]
texture = ExtResource("1_8yrbv")

[node name="Node2D" type="Node2D" parent="Summon2"]

[node name="Summon3" type="Area2D" parent="."]
position = Vector2(240, 144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Summon3"]
shape = SubResource("RectangleShape2D_kdkwq")

[node name="Sprite2D" type="Sprite2D" parent="Summon3"]
texture = ExtResource("1_8yrbv")

[node name="Tutorial" type="Sprite2D" parent="Summon3"]
z_index = 3
position = Vector2(33, -35)
texture = ExtResource("4_xrtut")

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qhy7w")
volume_db = -20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioReady" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_mxcml")
volume_db = -10.0
autoplay = true

[connection signal="input_event" from="Hell/Carrier" to="." method="_on_carrier_input_event"]
[connection signal="area_entered" from="Hell/Upgr1" to="Hell/Upgr1" method="_on_area_entered"]
[connection signal="input_event" from="Hell/Upgr1" to="Hell/Upgr1" method="_on_input_event"]
[connection signal="mouse_entered" from="Hell/Upgr1" to="Hell/Upgr1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hell/Upgr1" to="Hell/Upgr1" method="_on_mouse_exited"]
[connection signal="area_entered" from="Hell/Upgr6" to="Hell/Upgr6" method="_on_area_entered"]
[connection signal="input_event" from="Hell/Upgr6" to="Hell/Upgr6" method="_on_input_event"]
[connection signal="mouse_entered" from="Hell/Upgr6" to="Hell/Upgr6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hell/Upgr6" to="Hell/Upgr6" method="_on_mouse_exited"]
[connection signal="area_entered" from="Hell/Upgr4" to="Hell/Upgr4" method="_on_area_entered"]
[connection signal="input_event" from="Hell/Upgr4" to="Hell/Upgr4" method="_on_input_event"]
[connection signal="mouse_entered" from="Hell/Upgr4" to="Hell/Upgr4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hell/Upgr4" to="Hell/Upgr4" method="_on_mouse_exited"]
[connection signal="area_entered" from="Hell/Upgr3" to="Hell/Upgr3" method="_on_area_entered"]
[connection signal="input_event" from="Hell/Upgr3" to="Hell/Upgr3" method="_on_input_event"]
[connection signal="mouse_entered" from="Hell/Upgr3" to="Hell/Upgr3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Hell/Upgr3" to="Hell/Upgr3" method="_on_mouse_exited"]
[connection signal="input_event" from="Summon1" to="." method="_on_summon_1_input_event"]
[connection signal="mouse_entered" from="Summon1" to="." method="_on_summon_1_mouse_entered"]
[connection signal="mouse_exited" from="Summon1" to="." method="_on_summon_1_mouse_exited"]
[connection signal="input_event" from="Summon2" to="." method="_on_summon_2_input_event"]
[connection signal="mouse_entered" from="Summon2" to="." method="_on_summon_2_mouse_entered"]
[connection signal="mouse_exited" from="Summon2" to="." method="_on_summon_2_mouse_exited"]
[connection signal="input_event" from="Summon3" to="." method="_on_summon_3_input_event"]
[connection signal="mouse_entered" from="Summon3" to="." method="_on_summon_3_mouse_entered"]
[connection signal="mouse_exited" from="Summon3" to="." method="_on_summon_3_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
